test_fixtures/for/fun_in_body.lox
// ParserError: UnexpectedExpressionToken found Fun from l2c10 to l2c13
for (;;) fun foo() {}
